[project]
name = "kuryana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cloudscraper>=1.2.71",
    "fastapi[standard]>=0.115.6",
    "lxml>=5.3.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]
