[project]
name = "kuryana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.3",
    "lxml>=6.1.0",
    "msgspec>=0.21.0",
    "primp>=1.2.2",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4", "ruff>=0.8.5"]


[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "B9"]
ignore = ["E501", "E203"]
